ALB-Testing/secgroup.tf
resource "aws_security_group" "allow_ssh" {
  vpc_id = "${aws_vpc.Bancroft_Group.id}"
  name = "allow_ssh"
  description = " Allow SSH"

  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 22
    protocol = "tcp"
    to_port = 22
    cidr_blocks = ["196.52.2.114/32"]
  }
  ingress {
    from_port = 80
    protocol = "tcp"
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
}
